Brought .gitignore file up to date with original source

--- a/gitfiles/.gitignore
+++ b/gitfiles/.gitignore
@@ -7,6 +7,7 @@
 /[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
+/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -63,8 +64,15 @@ sysinfo.txt
 *.apk
 *.unitypackage
 
+# Previously generated submission zips
+/*.zip
+
 # Crashlytics generated file
 crashlytics-build.properties
 
-# Previously generated submission zips
-/*.zip
+# Packed Addressables
+/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+
+# Temporary auto-generated Android Assets
+/[Aa]ssets/[Ss]treamingAssets/aa.meta
+/[Aa]ssets/[Ss]treamingAssets/aa/*
